--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -1476,8 +1476,11 @@ columns2 figure {
 .item-div-img.sale:hover .sale-div{display:block;}
 .item-div-img.auction:hover .auction-div{display:block;}
 
+
 .item-div-img.active:hover .item-ho{display:block;}
 .item-div-img.active:hover:before{content:'';position: absolute;width: 100%;background: rgb(51 51 51 / 80%);height: 100%;left: 0;top: 0;z-index: 1;}
+
+
 
 .sale{}
 
@@ -2155,7 +2158,7 @@ input[type="radio"]:checked + label span {
     left: 50%;
     transform: translateX(-50%);
 }
-.tootip-4{background:#333333;font-size:13px;padding: 7px 13px;color: #fff;border-radius: 10px;position: absolute;left: -50px;top: -71px;width: 120px;text-align: center;}
+.tootip-4{background:#333333;font-size:13px;padding: 7px 13px;color: #fff;border-radius: 10px;position: absolute;left: -50px;bottom: 40px;width: 120px;text-align: center;}
 .tootip-4:after{
     content:'';
     width: 0px;
@@ -2170,6 +2173,20 @@ input[type="radio"]:checked + label span {
     transform: translateX(-50%);
 }
 
+.tootip-5{background:#333333;font-size:13px;padding: 7px 13px;color: #fff;border-radius: 10px;position: absolute;left: -34px;bottom: 40px;width: 90px;text-align: center;}
+.tootip-5:after{
+    content:'';
+    width: 0px;
+    height: 0px;
+    border-top: 13px solid #333333;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 0 solid transparent;
+    position: absolute;
+    bottom: -13px;
+    left: 50%;
+    transform: translateX(-50%);
+}
 
 .med{
     position: relative;
@@ -3677,4 +3694,95 @@ input[type="radio"]:checked + label span {
     position: relative;
 }
 .my-red:after{content:'*';position: absolute;left: -8px;top: -6px;color: #e9625c;}
+
+
+
+
+
+
+.input-bg{
+    background: none;
+    border: none;
+}
+
+
+.item-ho3{display:none;position: absolute;width: 100%;text-align: center;height: 100%;z-index: 1;bottom: 0;padding: 23px 0 26px 0;}
+.item-ho3:after{content:'';position: absolute;width: 100%;height: 100%;left: 0;bottom: 0;background-color: rgb(0 0 0 / 80%);z-index: -1;}
+
+
+
+
+
+
+
+
+
+.item-div-img.save:hover .save-div{display:block;}
+.item-div-img.reg:hover .reg-div{display:block;}
+.save-div img{}
+.save-div div.saves{
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+}
+.save-div .saves-text{
+    display: block;
+    font-size: 20px;
+    color: #e9625c;
+    font-weight: 600;
+    padding-top: 15px;
+}
+
+.reg-div{}
+.regs{
+	position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;	
+}
+.regs a{
+    display: block;
+    font-size: 14px;
+    font-weight: 600;
+    color: #e9625c;
+    width: 182px;
+    height: 42px;
+    text-align: center;
+    margin: 10px auto;
+    padding: 9px 1px 9px 15px;
+    border: #e9625c 2px solid;
+    border-radius: 50px;
+    position: relative;
+}
+.reg-a span{
+    position: relative;
+}
+.cor-a span{
+	position: relative;
+}
+.reg-a span:after{content:'';background-image: url(../img/mypage/b1-off.png);position: absolute;width: 18px;height: 22px;background-size: auto;left: -26px;top: 50%;transform: translateY(-50%);}
+.reg-a:hover span:after{background-image: url(../img/mypage/b1-on.png);}
+.reg-a:hover span{color:#fff;}
+.reg-a:hover{background-color:#e9625c;}
+
+.cor-a span:after{content:'';background-image: url(../img/mypage/b2-off.png);position: absolute;width: 21px;height: 22px;background-size: auto;left: -27px;top: 50%;transform: translateY(-50%);}
+.cor-a:hover span:after{background-image: url(../img/mypage/b2-on.png);}
+.cor-a:hover span{color:#fff;}
+.cor-a:hover{background-color:#e9625c;}
+
+
+.pop-wrap{}
+.pop-wrap .con-left{}
+.pop-wrap .con-right{}
+
+
+.mg_t150{margin-top:150px;}
+
+
+
+
+
 
