--- a/src/main/resources/static/css/ui_tablet.css
+++ b/src/main/resources/static/css/ui_tablet.css
@@ -2194,8 +2194,22 @@ input[type="radio"]:checked + label span {
     transform: translateX(-50%);
 }
 
-.tootip-4{background:#333333;font-size:13px;padding: 7px 13px;color: #fff;border-radius: 10px;position: absolute;left: -50px;top: -71px;width: 120px;text-align: center;}
+.tootip-4{background:#333333;font-size: 2.2rem;padding: 0.7rem 1.3rem;color: #fff;border-radius: 10px;position: absolute;left: 50%;bottom: 4.4rem;width: 23rem;text-align: center;transform: translateX(-50%);}
 .tootip-4:after{
+    content:'';
+    width: 0px;
+    height: 0px;
+    border-top: 13px solid #333333;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 0 solid transparent;
+    position: absolute;
+    bottom: -13px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.tootip-5{background:#333333;font-size: 2.2rem;padding: 0.7rem 1.3rem;color: #fff;border-radius: 10px;position: absolute;left: 50%;bottom: 4.4rem;width: 14rem;text-align: center;transform: translateX(-50%);}
+.tootip-5:after{
     content:'';
     width: 0px;
     height: 0px;
@@ -2311,8 +2325,8 @@ input[type="radio"]:checked + label span {
 .wd-185{width: 30rem;}
 .med-ic{
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 0.5rem;
+    bottom: 1.4rem;
 }
 .di-b{display:inline-block;}
 .mg_l50{margin-left:50px;}
@@ -3771,12 +3785,93 @@ input[type="radio"]:checked + label span {
     position: relative;
 }
 .my-red:after{content:'*';position: absolute;left: -1.8rem;top: -0.6rem;color: #e9625c;}
-
-
-
-
 .myd-img .btns-4{/* display:none; */width: 100%;margin-top: 1rem;}
 
+
+
+
+
+
+
+.input-bg{
+    background: none;
+    border: none;
+}
+
+.item-ho3{display:none;position: absolute;width: 100%;text-align: center;height: 100%;z-index: 1;bottom: 0;padding: 23px 0 26px 0;}
+.item-ho3:after{content:'';position: absolute;width: 100%;height: 100%;left: 0;bottom: 0;background-color: rgb(0 0 0 / 80%);z-index: -1;}
+
+
+.item-div-img.save:hover .save-div{display:block;}
+.item-div-img.reg:hover .reg-div{display:block;}
+.save-div img{
+    width: 8rem;
+}
+.save-div div.saves{
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+}
+.save-div .saves-text{
+    display: block;
+    font-size: 3.8rem;
+    color: #e9625c;
+    font-weight: 600;
+    padding-top: 2rem;
+}
+
+.reg-div{}
+.regs{
+	position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;	
+}
+.regs a{
+    display: block;
+    font-size: 2.9rem;
+    font-weight: 600;
+    color: #e9625c;
+    width: 41.4rem;
+    height: 8rem;
+    text-align: center;
+    margin: 2.5rem auto;
+    padding: 1.5rem 1px 1rem 15px;
+    border: #e9625c 2px solid;
+    border-radius: 50px;
+    position: relative;
+}
+.reg-a span{
+    position: relative;
+}
+.cor-a span{
+	position: relative;
+}
+.reg-a span:after{content:'';background-image: url(../img/mypage/b1-off.png);position: absolute;width: 2.4rem;height: 3rem;background-size: 2.4rem 3rem;left: -3.6rem;top: 50%;transform: translateY(-50%);}
+.reg-a:hover span:after{background-image: url(../img/mypage/b1-on.png);}
+.reg-a:hover span{color:#fff;}
+.reg-a:hover{background-color:#e9625c;}
+
+.cor-a span:after{content:'';background-image: url(../img/mypage/b2-off.png);position: absolute;width: 2.7rem;height: 3rem;background-size: 2.7rem 3rem;left: -3.7rem;top: 50%;transform: translateY(-50%);}
+.cor-a:hover span:after{background-image: url(../img/mypage/b2-on.png);}
+.cor-a:hover span{color:#fff;}
+.cor-a:hover{background-color:#e9625c;}
+
+
+.pop-wrap{}
+.pop-wrap .con-left{
+    display: block;
+}
+.pop-wrap .con-left .con-btn{display:none;}
+.pop-wrap .con-right{
+    max-width: 100%;
+}
+
+
+.mg_t150{margin-top: 0;}
 
 
 
