--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -435,8 +435,8 @@
 		<div class="modal-content">
 			<div class="modal-body">
 				<div class="modal-bs">
-					<div class="mb-img-1"><a href="/dealConfirmed" alt="작가 본인 선택"></a></div>
-					<div class="mb-img-2"><a href="/dealConfirmed" alt="소장중인 작품"></a></div>
+					<div class="mb-img-1" id="myWork"><a href="#" alt="작가 본인 선택"></a></div>
+					<div class="mb-img-2" id="myCollection"><a href="#" alt="소장중인 작품"></a></div>
 					<a href="#" class="mb-a" data-dismiss="modal" aria-label="Close"><img src="resources/img/de/end-btn.png" /></a>
 				</div>
 			</div>
@@ -806,7 +806,7 @@ function dealSearch(){
      			dealListHtml += '			<p>'+ dealList[i].workMatrl +'</p>';
      			dealListHtml += '			<p>'+ dealList[i].workSizeDepth +'x'+ dealList[i].workSizeWidth +'</p>';
      			if(dealList[i].dealTypCd == "AUCT"){
-     				dealListHtml += '			<h4>입찰가 '+ dealList[i].maxBidPrc +'</h4>';
+     				dealListHtml += '			<h4>입찰가 '+ formatComma(dealList[i].maxBidPrc) +'</h4>';
      				dealListHtml += '			<p class="ts-2">';
      				dealListHtml += '			'+ dealList[i].dealStrtDate +' – '+ dealList[i].dealEndngDate +'<br/>';
      				dealListHtml += '			응찰수 : '+ dealList[i].bidCnt +'<br/>';
@@ -814,7 +814,7 @@ function dealSearch(){
      				dealListHtml += '			</p>';
      			}
      			if(dealList[i].dealTypCd == "SALE"){
-     				dealListHtml += '			<h4>판매가 '+ dealList[i].maxBidPrc +'</h4>';
+     				dealListHtml += '			<h4>판매가 '+ formatComma(dealList[i].maxBidPrc) +'</h4>';
      			}
      			dealListHtml += '		</div>';
      			if(dealList[i].authSq == 2){
@@ -840,6 +840,40 @@ function searchOptionReset(){
 		v.checked = false;
 	});
 }
+
+$("#myWork").on("click", function(){
+	if(sAuthSqVal == null || sAuthSqVal == "" || sMbrSqVal == null || sMbrSqVal == ""){
+		$("#paintModal").modal("hide");
+		modalAlertShow("로그인 된 회원만 이용 할 수 있습니다.");
+	}else if(sAuthSqVal != 2){
+		$("#paintModal").modal("hide");
+		modalAlertShow("작가로 등록된 회원만 이용할 수 있습니다.");
+	}else if(sAuthSqVal == 2){
+		$("#paintModal").modal("hide");
+		modalConfirm("알림", "포토폴리오 > 나의 작품 페이지로 이동합니다.", function(confrim){
+			if(confrim){
+				window.location.href="/myWork";
+			}
+		});
+	}
+});
+
+$("#myCollection").on("click", function(){
+	if(sAuthSqVal == null || sAuthSqVal == "" || sMbrSqVal == null || sMbrSqVal == ""){
+		$("#paintModal").modal("hide");
+		modalAlertShow("로그인 된 회원만 이용 할 수 있습니다.");
+	}else{
+		$("#paintModal").modal("hide");
+		modalConfirm("알림", "My Gallery > 소장품 페이지로 이동합니다.", function(confrim){
+			$("#paintModal").modal("hide");
+			if(confrim){
+				window.location.href="/myCollection";
+			}
+		});
+	}
+});
+
+
 	
 </script>
     
