--- a/src/main/resources/templates/thymeleaf/fo/myPage/alarm.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/alarm.html
@@ -166,6 +166,18 @@ $('ul.dropdown-menu.mega-dropdown-menu').on('click', function(event){
     // therefore delegated events won't be fired
     event.stopPropagation();
 });
+
+$(function() { 
+	if(sAuthSqVal == 2){
+		document.getElementById("portfolio").style.display="";
+	}
+	$("#conTitle").empty();
+	const conBtn = document.getElementById("conBtn");
+	conBtn.remove();
+	var conTitleHtml = "";
+	conTitleHtml += '<h3>설정</h3>';
+	$("#conTitle").append(conTitleHtml).trigger("create");
+});   
 </script>
     
 	
