--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -55,7 +55,7 @@
 						
 							<div class="myd-box myd-mobile">
 								<div class="myd-img">
-									<img src="../common/img/mypage/img_bg.png"  class="" />
+									<img src="resources/img/mypage/img_bg.png"  class="" />
 									<button type="button" class="btns-4">응찰 히스토리</button>
 									<button type="button" class="btns-4">거래 계약 안내 및 상세</button>
 								</div>
@@ -105,7 +105,7 @@
 							
 							<div class="myd-box myd-mobile">
 								<div class="myd-img">
-									<img src="../common/img/mypage/img_bg.png"  class="" />
+									<img src="resources/img/mypage/img_bg.png"  class="" />
 									<button type="button" class="btns-4">응찰 히스토리</button>
 									<button type="button" class="btns-4">거래 계약 안내 및 상세</button>
 								</div>
@@ -165,217 +165,7 @@
 		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
 	</div>
 
-<!-- 모달검색 -->
 
-
-
-<div class="modal fade modal-s" id="paintModal" tabindex="-1" role="dialog" aria-labelledby="paintModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-sech2">
-		<div class="modal-content">
-			<div class="modal-body">
-				<div class="modal-bs">
-					<div class="mb-img-1"><a href="#" alt="작가 본인 선택"></a></div>
-					<div class="mb-img-2"><a href="#" alt="소장중인 작품"></a></div>
-					<a href="#" class="mb-a" data-dismiss="modal" aria-label="Close"><img src="../common/img/de/end-btn.png" /></a>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade modal-s" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-sech">
-		<div class="modal-content">
-			<div class="modal-header">
-				<div class="conts">
-				    <div class="close" data-dismiss="modal" aria-label="Close"></div>
-				</div>
-
-			</div>
-			<div class="modal-body">				
-				<!-- 검색버튼 클릭시 -->
-				<div class="search-show">
-					<div class="sea-box">
-						<img src="../common/img/w-logo.jpg" class="sea-img" />
-						
-						<div class="sea-won">
-							<!-- <div class="select-box">
-								<select>
-									<option>작가명</option>
-								</select>
-							</div> -->
-							<input type="text" class="" />
-							<a href="#"><img src="../common/img/icon-2.jpg" /></a>
-						</div>
-						<div class="ta-h3">
-							<h3 class="sea-h3">작품</h3>
-							<a href="#"><span>more</span></a>
-						</div>
-						<ul class="sea-text">
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-						</ul>
-						<div class="ta-h3">
-							<h3 class="sea-h3">작가</h3>
-							<a href="#"><span>more</span></a>
-						</div>
-						<ul class="sea-text">
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-						</ul>
-						<div class="ta-h3">
-							<h3 class="sea-h3">컨텐츠</h3>
-							<a href="#"><span>more</span></a>
-						</div>
-						<ul class="sea-text">
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-							<li><a href="#">text</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-<!-- Modal -->
-<div class="modal fade modal-s" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModal1Label" aria-hidden="true">
-	<div class="modal-dialog modal-sech3">
-		<div class="modal-content">
-			<div class="modal-header">
-				<div class="conts">
-				    <div class="close" data-dismiss="modal" aria-label="Close"></div>
-				</div>
-
-			</div>
-			<div class="modal-body">
-				<div class="pons-div">
-					<button type="button" class="pons-btn">동양화</button>
-					<button type="button" class="pons-btn">동양화</button>
-					<button type="button" class="pons-btn">동양화</button>
-					<button type="button" class="pons-btn">동양화</button>
-					<button type="button" class="pons-btn">동양화</button>
-					<button type="button" class="pons-btn">동양화</button>
-					<button type="button" class="pons-btn">동양화</button>
-				</div>
-				<ul class="drop-ul">
-					<li role="presentation">
-						<div class="drop-title">
-							<span>Deal wtith</span>
-						</div>
-						<div class="drop-body">
-							<div class="db-div">
-								<input type="radio" id="s1" name="ss" />
-								<label for="s1"><span></span>Collector</label>
-							</div>
-							<div class="db-div">
-								<input type="radio" id="s2" name="ss" />
-								<label for="s2"><span></span> Artist</label>
-							</div>
-						</div>
-					</li>
-					<li role="presentation">
-						<div class="drop-title">
-							<span>거래</span>
-						</div>
-						<div class="drop-body">
-							<div class="db-div">
-								<input type="checkbox" id="z1" name="cc" />
-								<label for="z1"><span></span>진행 중인 거래</label>
-							</div>
-							<div class="db-div">
-								<input type="checkbox" id="z2" name="cc" />
-								<label for="z2"><span></span>종료된 거래</label>
-							</div>
-							<div class="db-div">
-								<input type="checkbox" id="z3" name="cc" />
-								<label for="z3"><span></span>경매</label>
-							</div>
-							<div class="db-div">
-								<input type="checkbox" id="z4" name="cc" />
-								<label for="z4"><span></span>정찰가</label>
-							</div>
-						</div>
-					</li>
-					<li role="presentation">
-						<div class="drop-title">
-							<span>형태</span>
-						</div>
-						<div class="drop-body">
-							<div class="db-div">
-								<input type="checkbox" id="x1" name="cc" />
-								<label for="x1"><span></span>평면</label>
-							</div>
-							<div class="db-div">
-								<input type="checkbox" id="x2" name="cc" />
-								<label for="x2"><span></span>입체</label>
-							</div>
-							<div class="db-div">
-								<input type="checkbox" id="x3" name="cc" />
-								<label for="x3"><span></span>NFT</label>
-							</div>
-						</div>
-					</li>
-					<li role="presentation">
-						<div class="drop-title">
-							<span>분류</span>
-						</div>
-						<div class="drop-body">
-							<div class="db-div">
-								<input type="checkbox" id="v1" name="cc" />
-								<label for="v1"><span></span>동양화</label>
-							</div>
-							<div class="db-div">
-								<input type="checkbox" id="v2" name="cc" />
-								<label for="v2"><span></span>서양화</label>
-							</div>
-							<div class="db-div">
-								<input type="checkbox" id="v3" name="cc" />
-								<label for="v3"><span></span>팝아트</label>
-							</div>
-							<div class="db-div">
-								<input type="checkbox" id="v4" name="cc" />
-								<label for="v4"><span></span>현대미술</label>
-							</div>
-							<div class="db-div">
-								<input type="checkbox" id="v5" name="cc" />
-								<label for="v5"><span></span>고미술</label>
-							</div>
-						</div>
-					</li>
-					<li role="presentation">
-						<div class="drop-title">
-							<span>유형</span>
-						</div>
-						<div class="drop-body">
-						
-						</div>
-					</li>
-					<li role="presentation">
-						<div class="drop-title">
-							<span>종류</span>
-						</div>
-						<div class="drop-body">
-						
-						</div>
-					</li>
-					<div class="drop-btnb">
-						<button type="button" class="dbtn-1">선택</button>
-						<button type="button" class="dbtn-2">rereset</button>
-					</div>
-				</ul>
-			</div>
-		</div>
-	</div>
-</div>
 
 
 <script type="text/javascript">      
@@ -457,8 +247,19 @@
     	    event.stopPropagation();
     	});
       
-      $('.selectpicker').selectpicker();
+      //$('.selectpicker').selectpicker();
       
+jQuery(document).ready(function() {
+	if(sAuthSqVal == 2){
+		document.getElementById("portfolio").style.display="";
+	}
+	$("#conTitle").empty();
+	const conBtn = document.getElementById("conBtn");
+	conBtn.remove();
+	var conTitleHtml = "";
+	conTitleHtml += '<h3>My Deal</h3>';
+	$("#conTitle").append(conTitleHtml).trigger("create");
+});   
     </script>
     
 	
