--- a/src/main/resources/templates/thymeleaf/fo/myPage/mydeal_3.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mydeal_3.html
@@ -270,7 +270,11 @@ $('ul.dropdown-menu.mega-dropdown-menu').on('click', function(event){
     // therefore delegated events won't be fired
     event.stopPropagation();
 });
-      
+jQuery(document).ready(function() {
+	if(sAuthSqVal == 2){
+		document.getElementById("portfolio").style.display="";
+	}
+});    
 </script>
     
 	
