--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -3,7 +3,6 @@
 <div th:fragment="myPageLeftFragment" class="con-left2">
 
 	<div class="cont-title4" id="conTitle">
-		<h3>회원정보 수정</h3>
 	</div>
 	<div class="con-btn" id="conBtn">
 	</div>
@@ -20,14 +19,14 @@
 			<div id="collapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading1">
 				<div class="panel-body">
 					<ul class="mypage-ul">
-						<li class=""><a href="#">거래 내역</a></li>
+						<li class=""><a href="/myDeal">거래 내역</a></li>
 						<li class=""><a href="/coupon">등급 / 쿠폰 / 포인트</a></li>
 						<li class=""><a href="#">문의 내역</a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
-		<div class="panel panel-default">
+		<div class="panel panel-default" id="portfolio" style="display:none;">
 			<div class="panel-heading" role="tab" id="heading2">
 				<h4 class="panel-title">
 					<a data-toggle="collapse" data-parent="#accordion2" href="#collapse2" aria-expanded="true" aria-controls="collapse2">
@@ -39,7 +38,7 @@
 				<div class="panel-body">
 					<ul class="mypage-ul">
 						<li class=""><a href="#">작가 정보</a></li>
-						<li class=""><a href="#">나의작품</a></li>
+						<li class=""><a href="/myWork">나의 작품</a></li>
 					</ul>
 				</div>
 			</div>
@@ -56,7 +55,7 @@
 				<div class="panel-body">
 					<ul class="mypage-ul">
 						<li class=""><a href="/myCollection">소장품</a></li>
-						<li class=""><a href="#">스크랩</a></li>
+						<li class=""><a href="/scrap">스크랩</a></li>
 					</ul>
 				</div>
 			</div>
@@ -83,6 +82,5 @@
 </div>
 
 <script th:inline="javascript">
-
 </script>
 		
