--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-<div th:fragment="myPageLeftFragment" class="con-left2">
+<th:blcok th:fragment="myPageLeftFragment" class="con-left2">
 
 	<div class="cont-title4" id="conTitle">
 	</div>
@@ -79,8 +80,6 @@
 			</div>
 		</div>
 	</div>
-</div>
-
 <script th:inline="javascript">
 </script>
-		
+</th:blcok>	
